Bug 44592 - [4.5 Regression] wrong code at -O3
Summary: [4.5 Regression] wrong code at -O3
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.5.0
: P2 normal
Target Milestone: 4.5.3
Assignee: Richard Biener
URL:
Keywords: wrong-code
Depends on: 44699
Blocks:
  Show dependency treegraph
 
Reported: 2010-06-19 17:17 UTC by Dominique d'Humieres
Modified: 2011-01-17 11:34 UTC (History)
6 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.5.3, 4.6.0
Known to fail: 4.5.2
Last reconfirmed: 2010-06-25 15:34:24


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique d'Humieres 2010-06-19 17:17:23 UTC
The following code is miscompiled at -O3 with trunk and 4.5.0:


! From forall_12.f90
! Fails with loop reversal at -O3
!
  character(len=1) :: b(4) = (/"1","2","3","4"/), c(4)
  c = b
  i = 1
  ! This statement must be here for the abort below
  b(1:3)(i:i) = b(2:4)(i:i)

  b = c
  b(4:2:-1)(i:i) = b(3:1:-1)(i:i)

  ! This fails.  If the condition is printed, the result is F F F F
  if (any (b .ne. (/"1","1","2","3"/))) i = 2
  print *, b
  print *, b .ne. (/"1","1","2","3"/)
  if (i == 2) call abort
end


[macbook] f90/bug% gfc -O3 forall_12_db.f90
[macbook] f90/bug% a.out
 1123
 F F F F
Abort

Abort is not called if the test 'if (any ...' is replaced with

  if (any (b .ne. (/"1","1","2","4"/))) i = 2

As spotted by Tobias Burnus, the problem comes from

...
  static character(kind=1)[1:1] * A.5[4] = {&"1"[1]{lb: 1 sz: 1}, &"1"[1]{lb: 1 sz: 1}, &"2"[1]{lb: 1 sz: 1}, &"3"[1]{lb: 1 sz: 1}};
...

<bb 5>:
  D.1645_85 = A.5[3];
  D.1646_86 = (*D.1645_85)[1]{lb: 1 sz: 1};
  if (D.1646_86 != D.1596_154)
    goto <bb 7>;
  else
    goto <bb 6>;

<bb 6>:
...
Comment 1 Richard Biener 2010-06-24 21:58:27 UTC
Fails also at -O2 -funroll-loops.

I can't see anything wrong with the tree-level code.
Comment 2 H.J. Lu 2010-06-25 03:38:20 UTC
It is caused by revision 152236:

http://gcc.gnu.org/ml/gcc-cvs/2009-09/msg00987.html
Comment 3 Jakub Jelinek 2010-06-25 11:26:49 UTC
This goes wrong with -O2 -funroll-loops already during tree opts.  In vrp2 we have:
  b[2][1]{lb: 1 sz: 1} = D.1599_148;
  b[3][1]{lb: 1 sz: 1} = D.1599_154;
  D.1635_152 = 2;
  D.1636_151 = &b[2][1]{lb: 1 sz: 1};
  D.1637_146 = 3;
  D.1638_145 = &b[3][1]{lb: 1 sz: 1};
  __builtin_memcpy (D.1638_145, D.1636_151, 1);
...
  D.1647_84 = b[3][1]{lb: 1 sz: 1};
  D.1648_85 = A.5[3];
  D.1649_86 = (*D.1648_85)[1]{lb: 1 sz: 1};
  if (D.1647_84 != D.1649_86)

but in dom2:
  b[2][1]{lb: 1 sz: 1} = D.1599_148;
  b[3][1]{lb: 1 sz: 1} = D.1599_154;
  D.1635_152 = 2;
  D.1636_151 = &b[2][1]{lb: 1 sz: 1};
  D.1637_146 = 3;
  D.1638_145 = &b[3][1]{lb: 1 sz: 1};
  D.1680_170 = b[2][1]{lb: 1 sz: 1};
  b[3][1]{lb: 1 sz: 1} = D.1680_170;
...
  D.1647_84 = D.1599_154;
  D.1648_85 = A.5[3];
  D.1649_86 = (*D.1648_85)[1]{lb: 1 sz: 1};
  if (D.1649_86 != D.1599_154)

b[3] at that point isn't D.1599_154 though, but D.1599_148 (== D.1680_170).
Comment 4 Michael Matz 2010-06-25 15:34:24 UTC
Indeed.  Mine.
Comment 5 Michael Matz 2010-06-28 15:14:46 UTC
Subject: Bug 44592

Author: matz
Date: Mon Jun 28 15:14:31 2010
New Revision: 161496

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=161496
Log:
	PR middle-end/44592
	* gimple-fold.c (gimplify_and_update_call_from_tree): Maintain
	proper VDEF chain for intermediate stores in the sequence.

testsuite/
	PR middle-end/44592
	* gfortran.dg/pr44592.f90: New test.

Added:
    trunk/gcc/testsuite/gfortran.dg/pr44592.f90
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gimple-fold.c
    trunk/gcc/testsuite/ChangeLog

Comment 6 Michael Matz 2010-06-28 15:16:27 UTC
Fixed for 4.6, waiting a bit for 4.5.
Comment 7 Dominique d'Humieres 2010-06-28 20:42:04 UTC
> Fixed for 4.6, waiting a bit for 4.5.

Revision 161496 caused pr44699.
Comment 8 Dominique d'Humieres 2010-07-01 12:16:01 UTC
> > Fixed for 4.6, waiting a bit for 4.5.
>
> Revision 161496 caused pr44699.

I think the PRINTs are of no use in the testsuite for gfortran.dg/pr44592.f90. I'ld suggest to apply the following patch:

--- ../_clean/gcc/testsuite/gfortran.dg/pr44592.f90	2010-06-28 17:51:41.000000000 +0200
+++ gcc/testsuite/gfortran.dg/pr44592.f90	2010-07-01 14:12:38.000000000 +0200
@@ -13,8 +13,5 @@
   b(4:2:-1)(i:i) = b(3:1:-1)(i:i)
 
   ! This fails.  If the condition is printed, the result is F F F F
-  if (any (b .ne. (/"1","1","2","3"/))) i = 2
-  print *, b
-  print *, b .ne. (/"1","1","2","3"/)
-  if (i == 2) call abort
+  if (any (b .ne. (/"1","1","2","3"/))) call abort
 end
Comment 9 Jakub Jelinek 2010-07-01 12:21:36 UTC
The important question is if the testcase still ICEs with the fix reverted when you do that change.
Comment 10 Dominique d'Humieres 2010-07-01 13:18:23 UTC
> The important question is if the testcase still ICEs with the fix reverted when
> you do that change.

The test aborts with revisions before 161496.
Comment 11 Richard Biener 2010-07-31 09:29:55 UTC
GCC 4.5.1 is being released, adjusting target milestone.
Comment 12 Dominique d'Humieres 2010-10-10 19:36:15 UTC
What are the plans with is pr? Will it be back-ported to 4.5?
Comment 13 rguenther@suse.de 2010-10-10 20:03:30 UTC
On Sun, 10 Oct 2010, dominiq at lps dot ens.fr wrote:

> http://gcc.gnu.org/bugzilla/show_bug.cgi?id=44592
> 
> --- Comment #12 from Dominique d'Humieres <dominiq at lps dot ens.fr> 2010-10-10 19:36:15 UTC ---
> What are the plans with is pr? Will it be back-ported to 4.5?

There were various fallouts of the fix, including one fixed only
last week.  But yes, a backport might eventually happen
Comment 14 Richard Biener 2010-11-14 11:47:55 UTC
I will look at backporting the 4.6 variant.
Comment 15 Richard Biener 2010-12-16 13:03:16 UTC
GCC 4.5.2 is being released, adjusting target milestone.
Comment 16 Richard Biener 2011-01-17 11:31:14 UTC
Author: rguenth
Date: Mon Jan 17 11:31:10 2011
New Revision: 168894

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=168894
Log:
2011-01-17  Richard Guenther  <rguenther@suse.de>

        Backport from mainline
	PR tree-optimization/47286
	* tree-ssa-structalias.c (new_var_info): Register variables
	are global.

	* gcc.dg/tree-ssa/pr47286.c: New testcase.

        PR tree-optimization/44592
	* tree-ssa-ccp.c (gimplify_and_update_call_from_tree): Copy
	from trunk.

	* gfortran.dg/pr44592.f90: New testcase.

Added:
    branches/gcc-4_5-branch/gcc/testsuite/gcc.dg/tree-ssa/pr47286.c
    branches/gcc-4_5-branch/gcc/testsuite/gfortran.dg/pr44592.f90
Modified:
    branches/gcc-4_5-branch/gcc/ChangeLog
    branches/gcc-4_5-branch/gcc/testsuite/ChangeLog
    branches/gcc-4_5-branch/gcc/tree-ssa-ccp.c
    branches/gcc-4_5-branch/gcc/tree-ssa-structalias.c
Comment 17 Richard Biener 2011-01-17 11:34:31 UTC
Fixed.