	PR middle-end/44592 	* gimple-fold.c (gimplify_and_update_call_from_tree): Maintain 	proper VDEF chain for intermediate stores in the sequence.

testsuite/
	PR middle-end/44592
	* gfortran.dg/pr44592.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@161496 138bc75d-0d04-0410-961f-82ee72b054a4